--- a/public/views/admin/admin.html
+++ b/public/views/admin/admin.html
@@ -2,15 +2,7 @@
 	<h1>Admin</h1>
 	<hr>
 	<div class="row">
-		<div class="col-md-4">
-			<a ui-sref="companyAdmin" ui-sref-active="active" class="menu-box">
-				<i class="fa fa-list-alt"></i>
-				<!-- <img src="./assets/icons/time.svg" alt=""> -->
-				<br>
-				Company
-			</a>
-		</div>
-		<div class="col-md-4">
+		<div ng-show="vm.user.relationships.position._id == 1 || vm.user.relationships.position._id == 2" class="col-md-4">
 			<a ui-sref="itemAdmin" ui-sref-active="active" class="menu-box">
 				<i class="fa fa-caret-square-o-down"></i>
 				<!-- <img src="./assets/icons/item.svg" alt=""> -->
@@ -18,18 +10,15 @@
 				Item
 			</a>
 		</div>
-		<div class="col-md-4">
-			<a ui-sref="branchAdmin" ui-sref-active="active" class="menu-box">
+		<div ng-show="vm.user.relationships.position._id == 1 || vm.user.relationships.position._id == 2" class="col-md-4">
+			<a ui-sref="positionAdmin" ui-sref-active="active" class="menu-box">
 				<i class="fa fa-list-alt"></i>
 				<!-- <img src="./assets/icons/time.svg" alt=""> -->
 				<br>
-				Branch
+				Position
 			</a>
 		</div>
-	</div>
-	<br>
-	<div class="row">
-		<div class="col-md-4">
+		<div ng-show="vm.user.relationships.position._id != 4"class="col-md-4">
 			<a ui-sref="staffAdmin" ui-sref-active="active" class="menu-box">
 				<i class="fa fa-list-alt"></i>
 				<!-- <img src="./assets/icons/time.svg" alt=""> -->
@@ -37,12 +26,23 @@
 				Staff
 			</a>
 		</div>
-		<div class="col-md-4">
-			<a ui-sref="positionAdmin" ui-sref-active="active" class="menu-box">
+	</div>
+	<br>
+	<div class="row">
+		<div ng-show="vm.user.relationships.position._id == 1 " class="col-md-4">
+			<a ui-sref="companyAdmin" ui-sref-active="active" class="menu-box">
 				<i class="fa fa-list-alt"></i>
 				<!-- <img src="./assets/icons/time.svg" alt=""> -->
 				<br>
-				Position
+				Company
+			</a>
+		</div>
+		<div ng-show="vm.user.relationships.position._id == 1" class="col-md-4">
+			<a ui-sref="branchAdmin" ui-sref-active="active" class="menu-box">
+				<i class="fa fa-list-alt"></i>
+				<!-- <img src="./assets/icons/time.svg" alt=""> -->
+				<br>
+				Branch
 			</a>
 		</div>
 	</div>
