--- a/public/views/form/itemregistration.html
+++ b/public/views/form/itemregistration.html
@@ -90,7 +90,7 @@
 						</tr>
 					</tbody>
 				</table>
-				<button ng-click="vm.completeItems(supplier,items,user)" class="btn btn-lg btn-success u__margin20 right">complete registration</button>
+				<button ng-click="vm.completeItems(supplier,vm.items,vm.user)" class="btn btn-lg btn-success u__margin20 right">complete registration</button>
 			</div>
 		</div>
 		<hr>
