--- a/public/views/admin/item.html
+++ b/public/views/admin/item.html
@@ -35,6 +35,7 @@
 							</td>
 							<td style="width: 170px;">
 								<button ng-class="{'btn-success-border':item.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="item.update && vm.updateItem(item)">update</button>
+								<button ng-hide="vm.user.relationships.position._id != 1" class="btn btn-sm btn-danger animated fadeIn" ng-click="vm.deleteItem(item)">delete</button>
 							</td>
 						</tr>
 					</tbody>
