--- a/public/views/admin/staff.html
+++ b/public/views/admin/staff.html
@@ -17,7 +17,7 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr ng-repeat="staff in vm.staffs">
+						<tr ng-show="vm.user.relationships.position._id == 1" ng-repeat="staff in vm.staffs">
 							<td class="bold text-center narrow">
 								{{ staff.attributes._id }}
 							</td>
@@ -45,6 +45,35 @@
 							</td>
 							<td style="width: 170px;">
 								<button ng-class="{'btn-success-border':staff.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="staff.update && vm.updateUser(staff)">update</button>
+								<button class="btn btn-sm btn-danger animated fadeIn" ng-click="vm.deleteUser(staff)">delete</button>
+							</td>
+						</tr>
+						<tr ng-show="vm.user.relationships.position._id != 1 && staff.relationships.branch.attributes.name == vm.user.relationships.branch.name" ng-repeat="staff in vm.staffs">
+							<td class="bold text-center narrow">
+								{{ staff.attributes._id }}
+							</td>
+							<td class="narrow">
+								<input ng-change="staff.update = true" type="text" class="input-md" placeholder="Staff name" ng-model="staff.attributes.name">
+							</td>
+							<td>
+								<input ng-change="staff.update = true" type="text" class="input-lg" placeholder="Staff email" ng-model="staff.attributes.email">
+							</td>
+							<td ng-show="vm.user.relationships.position._id == 2">
+								<select ng-change="staff.update = true"
+										ng-model="staff.relationships.position"
+										ng-options="position.attributes.name for position in vm.positions track by position.attributes.name"
+										class="input-md">
+								</select>
+								<i class="fa fa-caret-down caret-select select-md"></i>
+							</td>
+							<td ng-hide="vm.user.relationships.position._id == 2">
+								{{staff.relationships.position.attributes.name}}
+							</td>
+							<td>
+								{{staff.relationships.branch.attributes.name}}
+							</td>
+							<td style="width: 170px;">
+								<button ng-class="{'btn-success-border':staff.update}" class="btn btn-sm btn-default animated fadeIn" ng-click="staff.update && vm.updateUser(staff)">update</button>
 							</td>
 						</tr>
 					</tbody>
@@ -69,7 +98,7 @@
 						<p class="small bold form-text">Email</p>
 					</div>
 					<div class="col-md-7 ">
-						<input ng-model="newUser.email" class="input-lg" type="text" placeholder="3xxxx">
+						<input ng-model="newUser.email" class="input-lg" type="text" placeholder="user@host.com">
 					</div>
 				</div>
 			</div>
@@ -96,7 +125,7 @@
 						<p class="small bold form-text">Password</p>
 					</div>
 					<div class="col-md-7 ">
-						<input ng-model="newUser.password" class="input-lg" type="text" placeholder="3xxxx">
+						<input ng-model="newUser.password" class="input-lg" type="password" placeholder="xxxx">
 					</div>
 				</div>
 			</div>
@@ -107,7 +136,7 @@
 					<div class="col-md-5 text-right">
 						<p class="small bold form-text">Branch</p>
 					</div>
-					<div class="col-md-7 ">
+					<div class="col-md-7">
 						<select ng-init="newUser.branch = vm.branches[0]" 
 								ng-model="newUser.branch"
 								ng-options="branch.attributes.name for branch in vm.branches"
